homelab/metabase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: metabase
  annotations:
    argocd.argoproj.io/sync-wave: "21"
spec:
  selector:
    app: metabase
  ports:
    - name: http
      port: 80
      targetPort: http
