homelab/metabase/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: metabase
  namespace: metabase
  annotations:
    argocd.argoproj.io/sync-wave: "22"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`metabase.k8s.hu.ls`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: metabase
          port: 80
  tls:
    secretName: wildcard-k8s-hu-ls-tls
